Add DMCA policy statement

--- a/data/www-php/views/about.mustache
+++ b/data/www-php/views/about.mustache
@@ -9,11 +9,41 @@
 
       <p><strong>Welcome to DHTSearch.</strong>&nbsp; DHTSearch is a DHT Search Engine that scans the <a href="https://www.bittorrent.org/beps/bep_0005.html">BitTorrent DHT network</a> for active torrents, collects information about them, and makes that information available in a searchable index.  DHTSearch is an invitation-only private search engine.  We require our users to register in order to manage the performance of the site and to prevent abuse.  Invitations to register may be obtained from any registered user.</p>
 
-      <p><strong>Attribution:</strong>&nbsp; DHTSearch is based on the <a href="https://github.com/AlphaReign">AlphaReign project</a> by <a href="https://prefinem.com">William Prefinem</a>.  That project is published in GitHub under the <a href="https://github.com/AlphaReign/scraper/blob/master/LICENSE">MIT License</a>.
+      <p><strong>Attribution:</strong>&nbsp; DHTSearch is based on the <a href="https://github.com/AlphaReign">AlphaReign project</a> by <a href="https://prefinem.com">William Prefinem</a>.  That project is published in GitHub under the <a href="https://github.com/AlphaReign/scraper/blob/master/LICENSE">MIT License</a>.</p>
 
-      <p><strong>DMCA Compliance:</strong>&nbsp; DHTSearch does not store or share any material.  DHTSearch simply indexes the current file sharing activity occuring between BitTorrent hosts on the internet.  DHTSearch has no control over what those other BitTorrent hosts do and share, DHTSearch is simply an observer of what they are doing and sharing.</p>
+      <p><strong>Digital Millennium Copyright Act Policy:</strong></p>
 
-      <p>Because we have no control over what BitTorrnet hosts do, we have no way to assist you if you seek to have material to which you claim copyright removed from the internet.  You may send DMCA Notices to us at <a href="mailto:dhtsearch.0@gmail.com">dhtsearch.0@gmail.com</a> if you want to, but again, we really won&rsquo;t be able to provide you with any meaningful assistance.</p>
+      <p>This policy is intended to implement the procedures described in the Title II of the Digital Millennium Copyright Act, 17 U.S.C. Section 512 (DMCA) for the reporting of alleged copyright infringement. It is our policy to respect the legitimate rights of copyrights owners, their agents and representatives. DHTSerach users are required to respect the legal protections provided by applicable copyright law.</p>
+
+      <p><i>Notification Agent:</i></p>
+
+      <p>Notification of alleged infringement should be sent to our <a href="mailto:dhtsearch.0@gmail.com">designated agent</a>. Upon receipt of notification of claimed infringement, we will follow the procedures outlined on this page and in the DCMA.  Complaints made to our designated agent will be communicated to the appropriate system administrator for DHTSEarch.</p>
+
+      <p><i>Complaint Notice Procedures for Copyright Owners:</i></p>
+
+      <p>A notice of alleged copyright infringement to the designated agent must include the following.</p>
+
+      <ul>
+        <li>An electronic or physical signature of the copyright owner or a person authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.
+Identification of the copyrighted work claimed to have been infringed, or if multiple copyrighted works at a single online site are covered by a single notice, a representative list of such works at that site.</li>
+        <li>Identification of the material that is claimed to be infringing or to be the subject of infringing activity and that is to be removed or access to which is to be disabled, and information reasonably sufficient to permit the Academies to locate the material.
+Information reasonably sufficient to permit the Academies to contact the complaining party, such as an address, telephone number, and, if available, an electronic mail address at which the complaining party may be contacted.</li>
+        <li>A statement that the complaining party has a good faith belief that use of the material in the matter complained of is not authorized by the copyright owner, its agent, or the law.
+A statement that the information in the notice is accurate, and under penalty of perjury, that the complaining party is authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
+        <li>Failure to include all of the above information may result in a delay of the processing or the DCMA notification.</li>
+      </ul>
+
+      <p><i>Notice and Takedown Procedure:</i></p>
+
+      <p>It is expected that all DHTSearch users will comply with applicable copyright laws. However, if DHTSearch is notified of claimed copyright infringement, or otherwise becomes aware of facts and circumstances from which infringement is apparent, we will respond expeditiously by removing, or disabling access to, the material that is claimed to be infringing or to be the subject of infringing activity. The Academies will comply with the appropriate provisions of the DMCA in the event a counter notification is received by our designated agent.</p> 
+
+      <p><i>Repeat Infringers:</i></p>
+
+      <p>Under appropriate circumstances, DHTSearch may, in our discretion, terminate authorization of users of our system or network who are repeat infringers.</p>
+
+      <p><i>Accommodation of Standard Technical Measures:</i></p>
+
+      <p>It is DHTSearch's policy to accommodate and not interfere with standard technical measures we determine are reasonable under the circumstances, in other words, technical measures that are used by copyright owners to identify or protect copyrighted works.</p>
 
     </div>
   </div>
