--- a/www-php/views/about.mustache
+++ b/www-php/views/about.mustache
@@ -17,25 +17,25 @@
 
       <p><i>Notification Agent:</i></p>
 
-      <p>Notification of alleged infringement should be sent to our <a href="mailto:dhtsearch.0@gmail.com">designated agent</a>. Upon receipt of notification of claimed infringement, we will follow the procedures outlined on this page and in the DCMA.  Complaints made to our designated agent will be communicated to the appropriate DHTSearch system administrator.</p>
+      <p>Notification of alleged infringement must be sent to our <a href="mailto:dhtsearch.0@gmail.com">designated agent</a>. Upon receipt of notification of claimed infringement, we will follow the procedures outlined on this page and in the DCMA.  Complaints made to our designated agent will be communicated to the appropriate DHTSearch system administrator for processing.</p>
 
       <p><i>Complaint Notice Procedures for Copyright Owners:</i></p>
 
       <p>A notice of alleged copyright infringement to the designated agent must include the following.</p>
 
       <ul>
-        <li>An electronic or physical signature of the copyright owner or a person authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.
-Identification of the copyrighted work claimed to have been infringed, or if multiple copyrighted works at a single online site are covered by a single notice, a representative list of such works at that site.</li>
-        <li>Identification of the material that is claimed to be infringing or to be the subject of infringing activity and that is to be removed or access to which is to be disabled, and information reasonably sufficient to permit DHTSearch administrators to locate the material.
-Information reasonably sufficient to permit DHTSearch administrators to contact the complaining party, such as an address, telephone number, and, if available, an electronic mail address at which the complaining party may be contacted.</li>
-        <li>A statement that the complaining party has a good faith belief that use of the material in the matter complained of is not authorized by the copyright owner, its agent, or the law.
-A statement that the information in the notice is accurate, and under penalty of perjury, that the complaining party is authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
-        <li>Failure to include all of the above information may result in a delay of the processing or the DCMA notification.</li>
+        <li>An electronic or physical signature of the copyright owner or a person authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
+        <li>Identification of the copyrighted work claimed to have been infringed, or if multiple copyrighted works at a single online site are covered by a single notice, a representative list of such works at that site.</li>
+        <li>Identification of the material that is claimed to be infringing or to be the subject of infringing activity and that is to be removed or access to which is to be disabled, and information reasonably sufficient to permit DHTSearch administrators to locate the material.</li>
+        <li>Information reasonably sufficient to permit DHTSearch administrators to contact the complaining party, such as an address, telephone number, and, if available, an electronic mail address at which the complaining party may be contacted.</li>
+        <li>A statement that the complaining party has a good faith belief that use of the material in the matter complained of is not authorized by the copyright owner, its agent, or the law.</li>
+        <li>A statement that the information in the notice is accurate, and under penalty of perjury, that the complaining party is authorized to act on behalf of the owner of an exclusive right that is allegedly infringed.</li>
+        <li>Failure to include all of the above information may result in a delay in the processing or the DCMA notification.</li>
       </ul>
 
       <p><i>Notice and Takedown Procedure:</i></p>
 
-      <p>It is expected that all DHTSearch users will comply with applicable copyright laws.  However, if DHTSearch is notified of claimed copyright infringement, or otherwise becomes aware of facts and circumstances from which infringement is apparent, we will respond expeditiously by removing, or disabling access to, the material that is claimed to be infringing or to be the subject of infringing activity. DHTSearch will comply with the appropriate provisions of the DMCA in the event a counter notification is received by our designated agent.
+      <p>All DHTSearch users are required to comply with applicable copyright laws.  If DHTSearch is notified of claimed copyright infringement, or otherwise becomes aware of facts and circumstances from which infringement is apparent, we will respond expeditiously by removing, or disabling access to, the material that is claimed to be infringing or to be the subject of infringing activity. DHTSearch will comply with the appropriate provisions of the DMCA in the event a counter notification is received by our designated agent.</p>
 
       <p><i>Accommodation of Standard Technical Measures:</i></p>
 
