Remove 'and growing' tagline

--- a/www-php/views/partials/nav.mustache
+++ b/www-php/views/partials/nav.mustache
@@ -23,7 +23,7 @@
                 {{#count}}
                     <ul class="nav navbar-nav navbar-left">
                         <li>
-                            <p class="navbar-text">{{count}} Torrents and Growing</p>
+                            <p class="navbar-text">{{count}} Torrents Indexed</p>
                         </li>
                     </ul>
                 {{/count}}
